Revert "[Frontend] Avoid compressing message text too much"
Turns out, this also sets a minimum width on emotes.

This reverts commit 49397008ce2b55803fc0e079b9441d56238ac4d4.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -163,7 +163,7 @@ body {
   color: inherit;
 }
 .message > .line .content {
-  min-width: 10em;
+  min-width: 0;
 }
 .message > .line .content .message-text {
   display: block;
